--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-circle-002.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-circle-002.html
@@ -4,8 +4,15 @@
         <title>Shape Outside Circle Valid Positions</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
+        <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
         <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-circle">
-        <meta name="assert" content="A circle's position argument may be any of the valid keyword/length/percentage combinations allowed by a <position> value">
+        <link rel="help" href="http://www.w3.org/TR/css3-values/#lengths">
+        <meta name="assert" content="A circle's position argument may be any of the valid combinations:
+                                     [ percentage|length left|center|right ]
+                                or   [ percentage|length left|center|right ] [ percentage|length top|center|bottom  ]
+                                or   [ left|center|right ]
+                                or   [ left|center|right top|center|bottom ]
+                                or   [ top|center|bottom ]. ">
         <meta name="flags" content="DOM">
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
@@ -14,8 +21,7 @@
     <body>
         <div id="log"></div>
         <script type="text/javascript">
-            generate_tests( ParsingUtils.testInlineStyle,
-                            ParsingUtils.buildEllipsoidTests("circle", ParsingUtils.serializedEllipsoids) );
+            generate_tests(ParsingUtils.testInlineStyle, ParsingUtils.buildEllipsoidTests("circle", true, "px"));
         </script>
     </body>
 </html>
