--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-001.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-001.html
@@ -15,12 +15,12 @@
         <div id="log"></div>
         <script type="text/javascript">
             generate_tests(
-                ParsingUtils.testInlineStyle
-                , ParsingUtils.valuesAsArrays([
+                ParsingUtils.testInlineStyle,
+                ParsingUtils.buildTestCases([
                 "ellipse(closest-side closest-side)",
                 "ellipse(farthest-side farthest-side)",
                 "ellipse(50px 50px)",
-                "ellipse(50% 50%)" ], 2)
+                "ellipse(50% 50%)" ], "valid")
             );
         </script>
     </body>
