--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-polygon-001.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-polygon-001.html
@@ -14,10 +14,12 @@
     <body>
         <div id="log"></div>
         <script type="text/javascript">
-            generate_tests(ParsingUtils.testInlineStyle, [
-                ["Nonzero", "polygon(nonzero, 1px 2px)"],
-                ["Evenodd", "polygon(evenodd, 1px 2px)"]
-            ]);
+            generate_tests(
+                ParsingUtils.testInlineStyle,
+                ParsingUtils.buildTestCases([
+                    ["Nonzero", "polygon(nonzero, 1px 2px)"],
+                    ["Evenodd", "polygon(evenodd, 1px 2px)"]], "valid", 1)
+            );
         </script>
     </body>
 </html>
