--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-000.html
@@ -14,12 +14,15 @@
     <body>
         <div id="log"></div>
         <script type="text/javascript">
-            generate_tests(ParsingUtils.testInlineStyle, [
-                ["No arguments", "ellipse()"],
-                ["Radial arguments", "ellipse(50px 50px)"],
-                ["Position argument", "ellipse(at 50px 50px)"],
-                ["Radial and position argument", "ellipse(50px 50px at 50px 50px)"]
-            ]);
+            generate_tests(
+                ParsingUtils.testInlineStyle,
+                ParsingUtils.buildTestCases([
+                    ["No arguments", "ellipse()"],
+                    ["Radial arguments", "ellipse(50px 50px)"],
+                    ["Position argument", "ellipse(at 50px 50px)"],
+                    ["Radial and position argument", "ellipse(50px 50px at 50px 50px)"]
+                ], "valid", 1)
+            );
         </script>
     </body>
 </html>
