--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-box-pair-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-box-pair-000.html
@@ -16,16 +16,16 @@
         <script type="text/javascript">
             generate_tests(
                 ParsingUtils.testInlineStyle
-                , ParsingUtils.valuesAsArrays([
-                "content-box polygon(nonzero, 1px 1px)",
-                "padding-box polygon(nonzero, 1px 1px)",
-                "border-box polygon(nonzero, 1px 1px)",
-                "margin-box polygon(nonzero, 1px 1px)",
-                "polygon(nonzero, 1px 1px) content-box",
-                "polygon(nonzero, 1px 1px) padding-box",
-                "polygon(nonzero, 1px 1px) border-box",
-                "polygon(nonzero, 1px 1px) margin-box"
-                ], 2)
+                , ParsingUtils.buildTestCases([
+                    "content-box polygon(nonzero, 1px 1px)",
+                    "padding-box polygon(nonzero, 1px 1px)",
+                    "border-box polygon(nonzero, 1px 1px)",
+                    "margin-box polygon(nonzero, 1px 1px)",
+                    "polygon(nonzero, 1px 1px) content-box",
+                    "polygon(nonzero, 1px 1px) padding-box",
+                    "polygon(nonzero, 1px 1px) border-box",
+                    "polygon(nonzero, 1px 1px) margin-box"
+                ], "valid")
             );
         </script>
     </body>
