--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-inherit-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-inherit-000.html
@@ -18,12 +18,12 @@
                 var outer = document.createElement("div");
                 var inner = document.createElement("div");
                 outer.appendChild(inner);
-                outer.style.setProperty("-webkit-shape-outside", "content-box");
-                inner.style.setProperty("-webkit-shape-outside", "inherit");
+                outer.style.setProperty("shape-outside", "content-box");
+                inner.style.setProperty("shape-outside", "inherit");
                 document.body.appendChild(outer);
-                var inline = inner.style.getPropertyValue("-webkit-shape-outside");
+                var inline = inner.style.getPropertyValue("shape-outside");
                 var style = getComputedStyle(inner);
-                var computed = style.getPropertyValue("-webkit-shape-outside");
+                var computed = style.getPropertyValue("shape-outside");
                 document.body.removeChild(outer);
                 assert_equals(inline, "inherit");
                 assert_equals(computed, "content-box");
