changed util function for better support of valid/invalid tests

--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-box-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-box-000.html
@@ -20,7 +20,7 @@
                     "content-box",
                     "padding-box",
                     "border-box",
-                    "margin-box" ], "valid")
+                    "margin-box" ])
             );
         </script>
     </body>
