--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-circle-001.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-circle-001.html
@@ -20,7 +20,7 @@
                     "circle(closest-side)",
                     "circle(farthest-side)",
                     "circle(50px)",
-                    "circle(50%)"], "valid" )
+                    "circle(50%)"] )
             );
         </script>
     </body>
