--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-001.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-001.html
@@ -20,7 +20,7 @@
                 "ellipse(closest-side closest-side)",
                 "ellipse(farthest-side farthest-side)",
                 "ellipse(50px 50px)",
-                "ellipse(50% 50%)" ], "valid")
+                "ellipse(50% 50%)" ])
             );
         </script>
     </body>
