--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-005.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-005.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Shape Outside Polygon Valid Fill-Rules</title>
+        <title>Shape Outside Inset - Invalid args</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
-        <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-polygon">
-        <meta name="assert" content="A polygonal basic shape's optional fill-rule may be either 'nonzero' or 'evenodd'">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-inset">
+        <meta name="assert" content="These tests verify that shape-outside inset() arguments can be numbers that are signed in 
+                                     positive and negative and/or decimal/non-decimal form.">
         <meta name="flags" content="DOM">
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
@@ -14,12 +15,9 @@
     <body>
         <div id="log"></div>
         <script type="text/javascript">
-            generate_tests(
-                ParsingUtils.testInlineStyle,
-                ParsingUtils.buildTestCases([
-                    ["Nonzero", "polygon(nonzero, 1px 2px)"],
-                    ["Evenodd", "polygon(evenodd, 1px 2px)"]], 1)
-            );
+            generate_tests( ParsingUtils.testInlineStyle, 
+                            ParsingUtils.buildInsetTests("", "", 1, true));
+            
         </script>
     </body>
 </html>
