--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-005.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-005.html
@@ -5,8 +5,7 @@
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
         <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-inset">
-        <meta name="assert" content="These tests verify that shape-outside inset() arguments can be numbers that are signed in 
-                                     positive and negative and/or decimal/non-decimal form.">
+        <meta name="assert" content="These tests verifies that invalid inset() arguments don't parse.">
         <meta name="flags" content="DOM">
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
