annotated the invalid tests for clarity

--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-006.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-006.html
@@ -29,6 +29,7 @@
                    ['inset(10px round +10.123px +20.00px +30.10px +40.5678px / 10.123px +20.00px +30.10px +40.5678px)', 'inset(10px round 10.123px 20px 30.1px 40.5678px / 10.123px 20px 30.1px 40.5678px)']
                 ], 0)
             );
+            // Invalid tests
             generate_tests(
                 ParsingUtils.testInlineStyle,
                 ParsingUtils.buildTestCases([
