--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-006.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-006.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Shape Outside Inset - positive/negative, decimal/non-decimal args</title>
+        <title>Shape Outside Inset Radial Args - positive/negative, decimal/non-decimal</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
         <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-inset">
