--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-003.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-003.html
@@ -20,7 +20,7 @@
     <body>
         <div id="log"></div>
         <script type="text/javascript">
-            generate_tests(ParsingUtils.testInlineStyle, ParsingUtils.buildEllipsoidTests("ellipse", false, "px"));
+            generate_tests(ParsingUtils.testInlineStyle, ParsingUtils.buildPositionTests("ellipse", false, "px"));
         </script>
     </body>
 </html>
