--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-circle-004.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-circle-004.html
@@ -15,7 +15,7 @@
     <body>
         <div id="log"></div>
         <script type="text/javascript">
-            generate_tests( ParsingUtils.testInlineStyle, ParsingUtils.buildEllipsoidTests("circle", true, ParsingUtils.validUnits) );
+            generate_tests( ParsingUtils.testInlineStyle, ParsingUtils.buildPositionTests("circle", true, ParsingUtils.validUnits) );
         </script>
     </body>
 </html>
