--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-002.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-002.html
@@ -21,7 +21,7 @@
     <body>
         <div id="log"></div>
         <script type="text/javascript">
-            generate_tests(ParsingUtils.testInlineStyle, ParsingUtils.buildEllipsoidTests("ellipse", true, "px"));
+            generate_tests(ParsingUtils.testInlineStyle, ParsingUtils.buildPositionTests("ellipse", true, "px"));
         </script>
     </body>
 </html>
