--- a/html/semantics/embedded-content-0/media-elements/seeking/seek-to-currentTime.html
+++ b/html/semantics/embedded-content-0/media-elements/seeking/seek-to-currentTime.html
@@ -10,14 +10,14 @@ async_test(function(t) {
   v.src = getVideoURI('/media/movie_5');
   v.onloadedmetadata = t.step_func(function() {
     assert_greater_than(v.readyState, v.HAVE_NOTHING);
-    assert_equals(v.seekable.start(0), 0);
-    assert_greater_than(v.seekable.end(0), 0);
+    assert_greater_than(v.seekable.length, 0);
     assert_false(v.seeking);
     v.currentTime = v.currentTime;
     assert_true(v.seeking);
     var events = [];
     v.onseeking = v.ontimeupdate = v.onseeked = t.step_func(function(e) {
       events.push(e.type);
+      // reliable if https://www.w3.org/Bugs/Public/show_bug.cgi?id=24774 is fixed
       assert_equals(v.seeking, e.type == 'seeking');
       if (e.type == 'seeked') {
         assert_array_equals(events, ['seeking', 'timeupdate', 'seeked']);
