Remove unnecessary clearing of event handlers in resource selection tests
Nothing that happens after t.done() will cause a test to fail, not even
immediately throwing an exception or calling assert_unreached().

--- a/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-invoke-insert-source-in-div.html
+++ b/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-invoke-insert-source-in-div.html
@@ -9,6 +9,6 @@ async_test(function(t) {
   var v = document.querySelector('video');
   v.onloadstart = t.step_func(function() { assert_unreached(); });
   v.firstChild.appendChild(document.createElement('source'));
-  window.onload = t.step_func(function() { v.onloadstart = null; t.done(); });
+  window.onload = t.step_func(function() { t.done(); });
 });
 </script>
