--- a/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-candidate-moved.html
+++ b/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-candidate-moved.html
@@ -9,7 +9,7 @@ var t = async_test(function(t) {
   var v = document.createElement('video');
   s = document.createElement('source');
   s.src = 'resources/delayed-broken-video.py';
-  s.onerror = t.step_func(function() { window.onload = null; t.done(); });
+  s.onerror = t.step_func(function() { t.done(); });
   v.appendChild(s); // invokes resource selection
   onload = t.step_func(function() { assert_unreached(); });
 });
