--- a/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-invoke-set-src.html
+++ b/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-invoke-set-src.html
@@ -7,7 +7,7 @@
 <script>
 async_test(function(t) {
   var v = document.querySelector('video');
-  v.onloadstart = t.step_func(function() { window.onload = null; t.done(); });
+  v.onloadstart = t.step_func(function() { t.done(); });
   v.setAttribute('src', '');
   window.onload = t.step_func(function() { assert_unreached(); });
 });
