--- a/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-candidate-moved.html
+++ b/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-candidate-moved.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>moving &lt;source> around and onerror</title>
+<title>moving the candidate source</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id=log></div>
