--- a/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-invoke-insert-source-in-namespace.html
+++ b/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-invoke-insert-source-in-namespace.html
@@ -3,7 +3,7 @@
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id=log></div>
-<video></video><!-- invokes resource selection but sets networkState to NETWORK_EMPTY again without firing any events -->
+<video></video>
 <script>
 async_test(function(t) {
   var v = document.querySelector('video');
