Test more of "await a stable state" in the resource selection algorithm
The tests target HTML r8507 and will likely need to updated soon:

https://www.w3.org/Bugs/Public/show_bug.cgi?id=24361
https://www.w3.org/Bugs/Public/show_bug.cgi?id=24707
https://www.w3.org/Bugs/Public/show_bug.cgi?id=24724

--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/resource-selection-stable-state-sync-event.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/resource-selection-stable-state-sync-event.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>await a stable state and sync event handlers</title>
+<title>NO stable state when returning from sync event handler</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id=log></div>
