--- a/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-stable-state-sync-event.html
+++ b/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-stable-state-sync-event.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>await a stable state and sync event handlers</title>
+<title>NO stable state when returning from sync event handler</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id=log></div>
