add test for first legend decendant that is not a child

--- a/html/semantics/forms/the-fieldset-element/disabled.html
+++ b/html/semantics/forms/the-fieldset-element/disabled.html
@@ -2,15 +2,20 @@
 <meta charset="utf-8">
 <title>Fieldset disabled</title>
 <link rel="author" title="Denis Ah-Kang" href="mailto:denis@w3.org">
-<link rel="help" href="http://www.whatwg.org/specs/web-apps/current-work/multipage/the-button-element.html#the-fieldset-element">
+<link rel="help" href="http://www.whatwg.org/html/#the-fieldset-element">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id="log"></div>
 <form>
-  <fieldset id=fs name="clubfields" disabled>
+  <fieldset id=fs disabled>
     <legend><input type=checkbox id=club></legend>
     <p><label>Name on card: <input id=clubname required></label></p>
     <p><label>Card number: <input id=clubnum required pattern="[-0-9]+"></label></p>
+  </fieldset>
+  <fieldset id=fs2 disabled>
+    <p><legend><input type=checkbox id=club2></legend></p>
+    <p><label>Name on card: <input id=clubname2 required></label></p>
+    <p><label>Card number: <input id=clubnum2 required pattern="[-0-9]+"></label></p>
   </fieldset>
 </form>
 <script>
@@ -20,4 +25,11 @@
     assert_false(document.getElementById('clubnum').willValidate, "fieldset is disabled so is input 'clubnum'");
     assert_true(document.getElementById('club').willValidate, "input 'club' is descendant of the first legend child of the fieldset. It should not be disabled");
   }, "The disabled attribute, when specified, causes all the form control descendants of the fieldset element, excluding those that are descendants of the fieldset element's first legend element child, if any, to be disabled.");
+
+  test(function () {
+    assert_true(document.getElementById('fs2').disabled, "The fieldset is disabled");
+    assert_false(document.getElementById('clubname2').willValidate, "fieldset is disabled so is input 'clubname2'");
+    assert_false(document.getElementById('clubnum2').willValidate, "fieldset is disabled so is input 'clubnum2'");
+    assert_false(document.getElementById('club2').willValidate, "the first legend is not a child of the disbled fieldset: input 'club2' is disabled");
+  }, "The first 'legend' element is not a child of the disabled fieldset: Its descendants should be disabled.");
 </script>
