--- a/html/semantics/embedded-content/media-elements/mime-types/canPlayType.html
+++ b/html/semantics/embedded-content/media-elements/mime-types/canPlayType.html
@@ -83,9 +83,12 @@ test(function() {
 }, 'application/octet-stream');
 
 test(function() {
-  var type = 'application/marks-fantasmagorical-format';
-  assert_equals(canPlayType(type), '', type);
-}, 'application/marks-fantasmagorical-format');
+  function t(type) {
+    assert_equals(canPlayType(type), '', type);
+  }
+  t('video/x-new-fictional-format');
+  t('video/x-new-fictional-format;codecs="kittens,bunnies"');
+}, 'video/x-new-fictional-format');
 
 function type_codecs_test(type, codecs) {
   test(function() {
@@ -119,9 +122,11 @@ function type_codecs_test(type, codecs) {
 }
 
 type_codecs_test('audio/mp4', ['mp4a.40.2']);
-type_codecs_test('audio/ogg', ['vorbis']);
+type_codecs_test('audio/ogg', ['speex', 'vorbis']);
 type_codecs_test('audio/webm', ['vorbis']);
-type_codecs_test('video/mp4', ['avc1.42E01E', 'mp4a.40.2']);
-type_codecs_test('video/ogg', ['theora', 'vorbis']);
+type_codecs_test('video/3gpp', ['mp4v.20.8', 'samr']);
+type_codecs_test('video/mp4', ['avc1.42E01E', 'avc1.4D401E', 'avc1.58A01E', 'avc1.64001E',
+                               'mp4a.40.2', 'mp4v.20.8', 'mp4v.20.240']);
+type_codecs_test('video/ogg', ['dirac', 'flac', 'speex', 'theora', 'vorbis']);
 type_codecs_test('video/webm', ['vorbis', 'vp8']);
 </script>
