Test that bogus codecs are not supported
Chrome and Safari fail this assertion.

--- a/html/semantics/embedded-content/media-elements/mime-types/canPlayType.html
+++ b/html/semantics/embedded-content/media-elements/mime-types/canPlayType.html
@@ -101,6 +101,10 @@ function type_codecs_test(type, codecs) {
     // that allows the codecs parameter if that parameter is not present.
     assert_equals(canPlayType(type), 'maybe', type);
 
+    // Bogus codecs must not be supported.
+    var typeBogus = mime(type, ['bogus']);
+    assert_equals(canPlayType(typeBogus), '', typeBogus);
+
     var supported = [];
     codecs.forEach(function(codec) {
       if (canPlayType(mime(type, [codec]))) {
