--- a/html/browsers/the-window-object/security-window/window-security.html
+++ b/html/browsers/the-window-object/security-window/window-security.html
@@ -1,53 +1,147 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>HTML Test: Window Security</title>
-<link rel="author" title="Intel" href="http://www.intel.com/">
-<link rel="help" href="http://www.w3.org/html/wg/drafts/html/CR/browsers.html#security-window">
-<link rel="help" href="http://www.w3.org/html/wg/drafts/html/CR/browsers.html#the-window-object">
+<link rel="author" title="Intel" href="http://www.intel.com/" />
+<link rel="help" href="http://www.whatwg.org/specs/web-apps/current-work/multipage/browsers.html#the-window-object" />
+<link rel="help" href="http://www.whatwg.org/specs/web-apps/current-work/multipage/timers.html#timers" />
+<link rel="help" href="http://www.whatwg.org/specs/web-apps/current-work/multipage/webappapis.html#atob" />
+<link rel="help" href="http://www.whatwg.org/html/#windowsessionstorage" />
+<link rel="help" href="http://www.whatwg.org/html/#windowlocalstorage" />
+<link rel="help" href="http://www.whatwg.org/specs/web-apps/current-work/multipage/browsers.html#window" />
+<link rel="help" href="http://dev.w3.org/csswg/cssom/#extensions-to-the-window-interface" />
+<link rel="help" href="http://dev.w3.org/csswg/cssom-view/#extensions-to-the-window-interface" />
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id="log"></div>
 <iframe id="fr" src="http://127.0.0.1" onload="fr_load()" style="display:none"></iframe>
 <script>
 
-var t = async_test("Start Window Security testing...");
+var t = async_test("Window Security testing");
 
 function fr_load() {
   fr = document.getElementById("fr");
 
   t.step(function () {
-    //SecurityError should be thrown
+    //SecurityError should be thrown out
     [
       //attributes
+      {name: "applicationCache"},
+      {name: "devicePixelRatio"},
       {name: "document"},
-      {name: "name"},
+      {name: "external"},
+      {name: "frameElement"},
       {name: "history"},
+      {name: "innerWidth"},
+      {name: "innerHeight"},
       {name: "locationbar"},
+      {name: "localStorage"},
       {name: "menubar"},
+      {name: "name"},
+      {name: "navigator"},
+      {name: "onabort"},
+      {name: "onafterprint"},
+      {name: "onbeforeprint"},
+      {name: "onbeforeunload"},
+      {name: "onblur"},
+      {name: "oncancel"},
+      {name: "oncanplay"},
+      {name: "oncanplaythrough"},
+      {name: "onchange"},
+      {name: "onclick"},
+      {name: "onclose"},
+      {name: "oncontextmenu"},
+      {name: "oncuechange"},
+      {name: "ondblclick"},
+      {name: "ondrag"},
+      {name: "ondragend"},
+      {name: "ondragenter"},
+      {name: "ondragleave"},
+      {name: "ondragover"},
+      {name: "ondragstart"},
+      {name: "ondrop"},
+      {name: "ondurationchange"},
+      {name: "onemptied"},
+      {name: "onended"},
+      {name: "onerror"},
+      {name: "onfocus"},
+      {name: "onhashchange"},
+      {name: "oninput"},
+      {name: "oninvalid"},
+      {name: "onkeydown"},
+      {name: "onkeypress"},
+      {name: "onkeyup"},
+      {name: "onload"},
+      {name: "onloadeddata"},
+      {name: "onloadedmetadata"},
+      {name: "onloadstart"},
+      {name: "onmessage"},
+      {name: "onmousedown"},
+      {name: "onmousemove"},
+      {name: "onmouseout"},
+      {name: "onmouseover"},
+      {name: "onmouseup"},
+      {name: "onmousewheel"},
+      {name: "onoffline"},
+      {name: "ononline"},
+      {name: "onpause"},
+      {name: "onplay"},
+      {name: "onplaying"},
+      {name: "onpagehide"},
+      {name: "onpageshow"},
+      {name: "onpopstate"},
+      {name: "onprogress"},
+      {name: "onratechange"},
+      {name: "onreset"},
+      {name: "onresize"},
+      {name: "onscroll"},
+      {name: "onseeked"},
+      {name: "onseeking"},
+      {name: "onselect"},
+      {name: "onshow"},
+      {name: "onstalled"},
+      {name: "onstorage"},
+      {name: "onsubmit"},
+      {name: "onsuspend"},
+      {name: "ontimeupdate"},
+      {name: "onunload"},
+      {name: "onvolumechange"},
+      {name: "onwaiting"},
+      {name: "pageXOffset"},
+      {name: "pageYOffset"},
       {name: "personalbar"},
+      {name: "screen"},
       {name: "scrollbars"},
       {name: "statusbar"},
-      {name: "documtoolbarent"},
       {name: "status"},
-      {name: "frameElement"},
-      {name: "navigator"},
-      {name: "external"},
-      {name: "applicationCache"},
-
+      {name: "screenX"},
+      {name: "screenY"},
+      {name: "sessionStorage"},
+      {name: "toolbar"},
       //methods
-      {name: "stop", isMethod: true},
-      {name: "open", isMethod: true},
       {name: "alert", isMethod: true},
-      {name: "confirm", isMethod: true},
-      {name: "prompt", isMethod: true},
-      {name: "print", isMethod: true},
-      {name: "showModalDialog", isMethod: true, args:["auto:blank", "dialog"]},
-      {name: "setTimeout", isMethod: true, args:[function () {}, 1]},
+      {name: "clearInterval", isMethod: true, args:[1]},
       {name: "clearTimeout", isMethod: true, args:[function () {}, 1]},
+      {name: "confirm", isMethod: true},
+      {name: "getComputedStyle", isMethod: true, args:[document.body, null]},
+      {name: "getSelection", isMethod: true},
+      {name: "matchMedia", isMethod: true, args:["(min-width:50px)"]},
+      {name: "moveBy", isMethod: true, args:[10, 10]},
+      {name: "moveTo", isMethod: true, args:[10, 10]},
+      {name: "open", isMethod: true},
+      {name: "print", isMethod: true},
+      {name: "prompt", isMethod: true},
+      {name: "resizeTo", isMethod: true, args:[10, 10]},
+      {name: "resizeBy", isMethod: true, args:[10, 10]},
+      {name: "scroll", isMethod: true, args:[10, 10]},
+      {name: "scrollTo", isMethod: true, args:[10, 10]},
+      {name: "scrollBy", isMethod: true, args:[10, 10]},
       {name: "setInterval", isMethod: true, args:[function () {}, 1]},
-      {name: "clearInterval", isMethod: true, args:[1]}
+      {name: "setTimeout", isMethod: true, args:[function () {}, 1]},
+      {name: "showModalDialog", isMethod: true, args:["auto:blank", "dialog"]},
+      {name: "stop", isMethod: true},
     ].forEach(function (item) {
       test(function () {
+        assert_true(item.name in window, "window." + item.name + " is not existing.");
         assert_throws("SecurityError", function () {
           if (item.isMethod)
             if (item.args)
@@ -57,29 +151,29 @@ function fr_load() {
           else
             fr.contentWindow[item.name];
         }, "The SecurityError exception is not thrown.");
-      }, "The SecurityError exception must be thrown when window." + item.name + " are accessed from a different origin");
+      }, "The SecurityError exception must be thrown out when window." + item.name + " are accessed from a different origin");
     });
 
-    //SecurityError should not be thrown
+    //SecurityError should not be thrown out
     [
       //attributes
-      {name: "location"},
-      {name: "window"},
+      {name: "closed"},
       {name: "frames"},
+      {name: "length"},
+      {name: "location"},
+      {name: "opener"},
+      {name: "parent"},
       {name: "self"},
       {name: "top"},
-      {name: "parent"},
-      {name: "opener"},
-      {name: "closed"},
-      {name: "length"},
-
+      {name: "window"},
       //methods
-      {name: "postMessage", isMethod: true, args: [{msg: 'foo'}, "*"]},
-      {name: "close", isMethod: true},
       {name: "blur", isMethod: true},
-      {name: "focus", isMethod: true}
+      {name: "close", isMethod: true},
+      {name: "focus", isMethod: true},
+      {name: "postMessage", isMethod: true, args: [{msg: 'foo'}, "*"]}
     ].forEach(function (item) {
       test(function () {
+        assert_true(item.name in window, "window." + item.name + " is not existing.");
         try {
           if (item.isMethod)
             if (item.args)
@@ -91,7 +185,7 @@ function fr_load() {
         } catch (e) {
           assert_unreached("Unexpected exception is thrown.");
         }
-      }, "The SecurityError must not be thrown when window." + item.name + " is accessed from a different origin");
+      }, "The SecurityError exception must not be thrown out when window." + item.name + " is accessed from a different origin");
     });
   });
   t.done();
