--- a/html/semantics/selectors/pseudo-classes/disabled.html
+++ b/html/semantics/selectors/pseudo-classes/disabled.html
@@ -5,7 +5,7 @@
 <link rel=help href="http://www.whatwg.org/html/#pseudo-classes" id=link2>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
-<script src="utils"></script></script>
+<script src="utils.js"></script>
 <div id="log"></div>
 <button id=button1 type=submit>button1</button>
 <button id=button2 disabled>button2</button>
