--- a/html/semantics/selectors/pseudo-classes/enabled.html
+++ b/html/semantics/selectors/pseudo-classes/enabled.html
@@ -5,7 +5,7 @@
 <link rel=help href="http://www.whatwg.org/html/#pseudo-classes" id=link2>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
-<script src="utils"></script></script>
+<script src="utils.js"></script>
 <div id="log"></div>
 <a id=link3></a>
 <area id=link4></area>
@@ -28,7 +28,7 @@
 <textarea id=textarea1>textarea1</textarea>
 <textarea disabled id=textarea2>textarea2</textarea>
 <form>
- <p><input type=submit contextmenu=formmenu id="submitbutton"></p>
+ <p><input type=submit contextmenu=formmenu id=submitbutton></p>
  <menu type=popup id=formmenu>
   <menuitem command="submitbutton" default id=menuitem1>
   <menuitem command="resetbutton" disabled id=menuitem2>
@@ -38,5 +38,5 @@
 <fieldset disabled id=fieldset2></fieldset>
 
 <script>
-  testSelector(":enabled", getElementsByIds(["link1", "link2", "link6", "link7", "link8", "button1", "input1", "select1", "optgroup1", "option1", "textarea1", "menuitem1", "fieldset1"]), "':enabled' should not match disabled elements");
+  testSelector(":enabled", getElementsByIds(["link1", "link2", "link6", "link7", "link8", "button1", "input1", "select1", "optgroup1", "option1", "textarea1", "submitbutton", "menuitem1", "fieldset1"]), "':enabled' should <a>s/<area>s/<link>s that have an href attribute and elements that are not disabled");
 </script>
