--- a/html/semantics/selectors/pseudo-classes/focus.html
+++ b/html/semantics/selectors/pseudo-classes/focus.html
@@ -5,7 +5,7 @@
 <link rel=help href="http://www.whatwg.org/html/#pseudo-classes" id=link2>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
-<script src="utils"></script></script>
+<script src="utils.js"></script>
 <div id="log"></div>
 <button id=button1 type=submit>button1</button>
 <input id=input1>
@@ -15,6 +15,7 @@
 <input type=radio id=radio1 checked>
 
 <script>
+  testSelector(":focus", getElementsByIds([]), "No element has the focus");
   document.getElementById("input1").focus(); // set the focus on input1
   testSelector(":focus", getElementsByIds(["input1"]), "input1 has the focus");
 </script>
