--- a/html/semantics/selectors/pseudo-classes/valid-invalid.html
+++ b/html/semantics/selectors/pseudo-classes/valid-invalid.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <meta charset=utf-8>
-<title>Selector: pseudo-classes (:valid)</title>
+<title>Selector: pseudo-classes (:valid, :invalid)</title>
 <link rel="author" title="Denis Ah-Kang" href="mailto:denis@w3.org" id=link1>
 <link rel=help href="http://www.whatwg.org/html/#pseudo-classes" id=link2>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
-<script src="utils"></script></script>
+<script src="utils.js"></script>
 <div id="log"></div>
 <input type=text id=text1 value="foobar" required>
 <input type=text id=text2 required>
@@ -23,5 +23,6 @@
 </fieldset>
 
 <script>
-  testSelector(":valid", getElementsByIds(["text1", "form1", "text3", "fieldset1", "text5"]), "':valid' matches elements that satisfy their constraints, form/fieldset with descendants that satisfy their constraints");
+  testSelector(":valid", getElementsByIds(["text1", "form1", "text3", "fieldset1", "text5"]), "':valid' matches elements that satisfy their constraints, <form>s/<fieldset>s with descendants that satisfy their constraints");
+  testSelector(":invalid", getElementsByIds(["text2", "form2", "text4", "fieldset2", "text6"]), "':invalid' matches elements that do not satisfy their constraints, <form>s/<fieldset>s with descendants that do not satisfy their constraints");
 </script>
