Check that all property descriptors for attributes have a set property.

--- a/html/browsers/the-window-object/window-properties.html
+++ b/html/browsers/the-window-object/window-properties.html
@@ -28,8 +28,8 @@ function assert_data_propdesc(pd, Writable, Enumerable, Configurable) {
 function assert_accessor_propdesc(pd, hasSetter, Enumerable, Configurable) {
   assert_equals(typeof pd, "object");
   assert_equals(typeof pd.get, "function");
-  assert_equals("set" in pd, hasSetter,
-                "Should have a setter for writable and replaceable attributes");
+  assert_true("set" in pd,
+              "Should always have a setter property on the property descriptor");
   assert_equals(typeof pd.set, hasSetter ? "function" : "undefined");
   assert_equals(pd.enumerable, Enumerable);
   assert_equals(pd.configurable, Configurable);
